# fabricks

./: .gitignore  .mcp.json  404.html  AGENTS.md  CLAUDE.md  LLM.md  README.md  index.html  job-schema-bronze.json  job-schema-gold.json  job-schema-silver.json  job-schema.json
.claude/: settings.json  (+1 more)
framework/: .debug.py  .gitignore  README.md  databricks.yml  dependencies.sh  format.sh  mkdocs.sh  mkdocs.yml  pyproject.toml  utilities.sh
framework/deployment/: .gitignore  deploy_to_dbfs.py  download_packages_for_upload.py
framework/docs/: index.md  license.md  release-notes.md  runtime.md  steps.md
framework/docs/examples/runtime/: index.md
framework/docs/helpers/: getting-started.md  init.md  job.md  runtime.md  schedule.md  step.md
framework/docs/introduction/: index.md  layers.md  overview.md
framework/docs/reference/: cdc.md  checks-data-quality.md  extenders-udfs-parsers.md  extenders-udfs-views.md  table-options.md  views.md
framework/docs/steps/: BRONZE.md  GOLD.md  SILVER.md  semantic.md
framework/fabricks/: default.py
framework/fabricks/api/: __init__.py  context.py  core.py  deploy.py  exceptions.py  extenders.py  job_schema.py  log.py  masks.py  parsers.py  schedules.py  udfs.py  utils.py  version.py  views.py
framework/fabricks/api/cdc/: __init__.py  nocdc.py  scd0.py  scd1.py  scd2.py
framework/fabricks/api/metastore/: __init__.py  database.py  table.py  view.py
framework/fabricks/api/notebooks/: add_fabricks.py  cluster.py  initialize.py  optimize.py  process.py  run.py  schedule.py  standalone.py  terminate.py  vacuum.py
framework/fabricks/cdc/: __init__.py  cdc.py  nocdc.py  scd.py  scd0.py  scd1.py  scd2.py
framework/fabricks/cdc/base/: __init__.py  _types.py  cdc.py  configurator.py  generator.py  merger.py  processor.py  types.py
framework/fabricks/cdc/templates/: README.md  filter.sql.jinja  merge.sql.jinja  query.sql.jinja
framework/fabricks/config/: base.py  runtime.py
framework/fabricks/config/fabricks/: __init__.py  base.py  environment.py  pyproject.py
framework/fabricks/config/jobs/: __init__.py  base.py  bronze.py  gold.py  resolved.py  silver.py
framework/fabricks/config/steps/: __init__.py  base.py  bronze.py  gold.py  silver.py
framework/fabricks/context/: __init__.py  _types.py  config.py  helpers.py  log.py  runtime.py  secret.py  spark.py  spark_session.py  types.py  utils.py
framework/fabricks/context/config/: __init__.py  base.py  utils.py
framework/fabricks/core/: __init__.py  extenders.py  helpers.py  job_schema.py  masks.py  read.py  schedules.py  site_packages.py  udfs.py  utils.py  views.py
framework/fabricks/core/dags/: __init__.py  base.py  generator.py  log.py  processor.py  run.py  terminator.py  utils.py
framework/fabricks/core/deploy/: __init__.py  tables.py  udfs.py  views.py
framework/fabricks/core/forge/: __init__.py  masks.py  notebooks.py  tables.py  udfs.py  utils.py  views.py
framework/fabricks/core/jobs/: __init__.py  bronze.py  get_job.py  get_job_conf.py  get_job_id.py  get_jobs.py  get_schedule.py  get_schedules.py  gold.py  silver.py
framework/fabricks/core/parsers/: __init__.py  _types.py  base.py  decorator.py  get_parser.py  utils.py
framework/fabricks/core/schedules/: __init__.py  dags.py  diagrams.py  generate.py  get_schedule.py  get_schedules.py  process.py  run.py  standalone.py  terminate.py  views.py
framework/fabricks/core/scripts/: __init__.py  armageddon.py  generate.py  job_schema.py  optimize.py  process.py  stats.py  steps.py  terminate.py  vacuum.py
framework/fabricks/core/steps/: __init__.py  _types.py  base.py  get_step.py  get_step_conf.py
framework/fabricks/deploy/: __init__.py  masks.py  notebooks.py  runtime.py  schedules.py  tables.py  udfs.py  utils.py  variables.py  views.py
framework/fabricks/metastore/: README.md  __init__.py  _types.py  database.py  dbobject.py  pyproject.toml  relational.py  table.py  utils.py  view.py
framework/fabricks/models/: __init__.py  base.py  common.py  config.py  dependency.py  job.py  path.py  runtime.py  schedule.py  step.py  table.py  utils.py
framework/fabricks/models/config/: __init__.py  base.py  models.py  runtime.py  utils.py
framework/fabricks/models/interfaces/: __init__.py  job.py  step.py
framework/fabricks/models/protocols/: job.py
framework/fabricks/models/resolvers/: __init__.py
framework/fabricks/models/runtime/: __init__.py  models.py  utils.py
framework/fabricks/utils/: README.md  _types.py  azure_queue.py  azure_table.py  console.py  container.py  dataframe.py  dbutils.py  fdict.py  helpers.py  log.py  mermaid.py  path.py  pip.py  pydantic.py  pyproject.toml  runtime_config.py  secret.py  spark.py  sqlglot.py  variables.py
framework/fabricks/utils/path/: __init__.py  base.py  file_share.py  git.py
framework/runtime/: job-schema.json
framework/runtime/bronze/: _config.princesses.yml
framework/runtime/fabricks/: conf.fabricks.yml  conf.uc.fabricks.yml
framework/scripts/: format.sh  remote_pull.py  runtests.py
framework/tests/: armageddon.py  compare.py  conftest.py  deploy.py  init.sh  initialize.py  initscript_test.sh  reset.py  run.py  runtests.py  schedule.py  test_runtime_config_substitution.py  types.py  utils.py
framework/tests/integration/: README.md  _types.py  add_fabricks.py  add_missing_modules.py  add_root.py  armageddon.py  compare.py  conftest.py  fabricksconfig.json  fix_notebooks.ipynb  fix_notebooks.py  init.sh  initialize.py  landing_to_raw.py  reset.py  run.py  run_jobs.py  runjobs.py  runtests.py  schedule.py  test_path.py  types.py  utils.py
framework/tests/job1/: test_cdc.py  test_check.py  test_dependency.py  test_gold.py  test_invoke.py  test_overwrite.py  test_schedule.py  test_semantic.py  test_silver.py
framework/tests/job2/: test_gold.py  test_run.py  test_semantic.py  test_silver.py
framework/tests/job3/: test_gold.py  test_run.py  test_silver.py
framework/tests/runtime/: .gitignore  job-schema.json
framework/tests/unit/: conftest.py  runtests.py  test_git_path.py  test_read_yaml.py  test_variable_substitution.py
(+524 files in other folders)
