[tool.poetry]
name = "fabricks"
version = "0.9.7.1"
description = ""
authors = ["BMS DWH Team <bi_support@bmsuisse.ch>"]
readme = "README.md"
packages = [{ include = "fabricks" }]

# Attention: You may never specify newer dependencies than latests Databricks LTS Runtime
# Eg, PyYaml is at 6.0 there
[tool.poetry.dependencies]
azure-data-tables = "^12.5.0"
azure-identity = ">=1.10.0"
azure-storage-blob = ">=12.14.1"
azure-storage-queue = "^12.10.0"
databricks-sdk = ">=0.20.0"
jinja2 = ">=2.11.3"
python = ">=3.9,<4"
python-dotenv = ">=1.0.1"
pyyaml = ">=6.0.0"
sqlglot = ">=22.1.1"

[tool.poetry.group.test]
optional = true 

[tool.poetry.group.test.dependencies]
pandas = ">=1.5.3"
pytest = ">=7.1.2"
pytest-order = ">=1.0.1"

[tool.poetry.group.dev]
optional = true 

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
databricks-connect = ">=11.0.0"
isort = "^5.13.2"
notebook = ">=6.4.12"
pycln = "^2.4.0"
pyright = ">=1.1.261"
ruff = ">=0.4.3"
shandy-sqlfmt = "^0.23.2"
yamlfix = ">=1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = [".venv", "fabricks/api/notebooks"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.yamlfix]
line_length = 119

[tool.sqlfmt]
line_length = 119

[tool.pycln]
all = false

[tool.autoflake]
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
expand-star-imports = true
exclude = ["_init__.py"]
