[project]
name = "fabricks"
version = "2.1.1"
description = ""
authors = [
    { name = "BMS DWH Team", email = "bi_support@bmsuisse.ch" },
]
# Attention: You may never specify newer dependencies than latests Databricks LTS Runtime
# Eg, PyYaml is at 6.0 there
dependencies = [
    "azure-data-tables >=12.5.0,<13",
    "azure-identity >=1.10.0",
    "azure-storage-blob >=12.14.1",
    "azure-storage-queue >=12.10.0,<13",
    "databricks-sdk >=0.20.0",
    "jinja2 >=2.11.3",
    "python-dotenv >=1.0.1",
    "pyyaml >=6.0.0",
    "sqlglot >=22.1.1",
    "tenacity>=9.1.2",
    "tomli>=2.2.1;python_version<\"3.11\"",
    "tqdm>=4.67.1",
]
requires-python = ">=3.9,<4"


[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = [
    ".venv",
    "fabricks/api/notebooks",
]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.yamlfix]
line_length = 119

[tool.sqlfmt]
line_length = 119

[tool.pycln]
all = false

[tool.autoflake]
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
expand-star-imports = true
exclude = [
    "_init__.py",
]

[tool.uv]
native-tls = true
keyring-provider = "subprocess"

[tool.hatch.build.targets.wheel]
packages = [
    "fabricks",
]

[dependency-groups]
test = [
    "pandas >=1.5.3",
    "pytest >=7.1.2",
    "pytest-order >=1.0.1",
]
dev = [
    "autoflake >=2.3.1,<3",
    "databricks-connect >=11.0.0",
    "isort >=5.13.2,<6",
    "notebook >=6.4.12",
    "pycln >=2.4.0,<3",
    "pyright >=1.1.261",
    "ruff >=0.4.3",
    "shandy-sqlfmt >=0.23.2",
    "yamlfix >=1.14.0",
]

[tool.fabricks]
runtime = "tests/integration/runtime"
notebooks = "fabricks/api/notebooks"
job_config_from_yaml = true
loglevel = "info"
debugmode = false
config = "tests/integration/runtime/fabricks/conf.uc.fabricks.yml"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
